1.5/_sources/modules/generated/sklearn.isotonic.IsotonicRegression.rst.txt
IsotonicRegression
==================

.. currentmodule:: sklearn.isotonic

.. autoclass:: IsotonicRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.isotonic.IsotonicRegression sklearn.isotonic.IsotonicRegression.__init__ sklearn.isotonic.IsotonicRegression.fit sklearn.isotonic.IsotonicRegression.fit_transform sklearn.isotonic.IsotonicRegression.get_feature_names_out sklearn.isotonic.IsotonicRegression.get_metadata_routing sklearn.isotonic.IsotonicRegression.get_params sklearn.isotonic.IsotonicRegression.predict sklearn.isotonic.IsotonicRegression.score sklearn.isotonic.IsotonicRegression.set_fit_request sklearn.isotonic.IsotonicRegression.set_output sklearn.isotonic.IsotonicRegression.set_params sklearn.isotonic.IsotonicRegression.set_predict_request sklearn.isotonic.IsotonicRegression.set_score_request sklearn.isotonic.IsotonicRegression.set_transform_request sklearn.isotonic.IsotonicRegression.transform 
   :add-heading: Gallery examples
   :heading-level: -