1.7/_sources/modules/generated/sklearn.isotonic.IsotonicRegression.rst.txt
IsotonicRegression
==================

.. currentmodule:: sklearn.isotonic

.. autoclass:: IsotonicRegression
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.isotonic.IsotonicRegression sklearn.isotonic.IsotonicRegression.__delattr__ sklearn.isotonic.IsotonicRegression.__dir__ sklearn.isotonic.IsotonicRegression.__eq__ sklearn.isotonic.IsotonicRegression.__format__ sklearn.isotonic.IsotonicRegression.__ge__ sklearn.isotonic.IsotonicRegression.__getattribute__ sklearn.isotonic.IsotonicRegression.__getstate__ sklearn.isotonic.IsotonicRegression.__gt__ sklearn.isotonic.IsotonicRegression.__hash__ sklearn.isotonic.IsotonicRegression.__init__ sklearn.isotonic.IsotonicRegression.__init_subclass__ sklearn.isotonic.IsotonicRegression.__le__ sklearn.isotonic.IsotonicRegression.__lt__ sklearn.isotonic.IsotonicRegression.__ne__ sklearn.isotonic.IsotonicRegression.__new__ sklearn.isotonic.IsotonicRegression.__reduce__ sklearn.isotonic.IsotonicRegression.__reduce_ex__ sklearn.isotonic.IsotonicRegression.__repr__ sklearn.isotonic.IsotonicRegression.__setattr__ sklearn.isotonic.IsotonicRegression.__setstate__ sklearn.isotonic.IsotonicRegression.__sizeof__ sklearn.isotonic.IsotonicRegression.__sklearn_clone__ sklearn.isotonic.IsotonicRegression.__sklearn_tags__ sklearn.isotonic.IsotonicRegression.__str__ sklearn.isotonic.IsotonicRegression.__subclasshook__ sklearn.isotonic.IsotonicRegression._build_f sklearn.isotonic.IsotonicRegression._build_request_for_signature sklearn.isotonic.IsotonicRegression._build_y sklearn.isotonic.IsotonicRegression._check_input_data_shape sklearn.isotonic.IsotonicRegression._get_default_requests sklearn.isotonic.IsotonicRegression._get_doc_link sklearn.isotonic.IsotonicRegression._get_metadata_request sklearn.isotonic.IsotonicRegression._get_param_names sklearn.isotonic.IsotonicRegression._get_params_html sklearn.isotonic.IsotonicRegression._html_repr sklearn.isotonic.IsotonicRegression._repr_html_inner sklearn.isotonic.IsotonicRegression._repr_mimebundle_ sklearn.isotonic.IsotonicRegression._transform sklearn.isotonic.IsotonicRegression._validate_params sklearn.isotonic.IsotonicRegression.fit sklearn.isotonic.IsotonicRegression.fit_transform sklearn.isotonic.IsotonicRegression.get_feature_names_out sklearn.isotonic.IsotonicRegression.get_metadata_routing sklearn.isotonic.IsotonicRegression.get_params sklearn.isotonic.IsotonicRegression.predict sklearn.isotonic.IsotonicRegression.score sklearn.isotonic.IsotonicRegression.set_fit_request sklearn.isotonic.IsotonicRegression.set_output sklearn.isotonic.IsotonicRegression.set_params sklearn.isotonic.IsotonicRegression.set_score_request sklearn.isotonic.IsotonicRegression.transform 
   :add-heading: Gallery examples
   :heading-level: -